--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -77,13 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "py_list = [0,1,2,3,4]\n",
+    "py_range = range(0,5)\n",
+    "array_from_list = np.array(py_list)\n",
+    "array_from_range = np.array(py_range)\n"
    ]
   },
   {
@@ -108,30 +109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
-    "#Your code here"
+    "array_height_inches = np.array(list_height_inches)\n",
+    "array_height_meters = array_height_inches * 0.0254\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
-    "#your code here"
+    "array_weight_pounds = np.array(list_weight_pounds)\n",
+    "array_weight_kilograms = array_weight_pounds / 2.2046"
    ]
   },
   {
@@ -151,13 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "array_BMI = array_weight_kilograms / (array_height_meters * array_height_meters)"
    ]
   },
   {
@@ -169,13 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "identity_vector = np.ones(len(array_BMI))\n",
+    "identity_vector"
    ]
   },
   {
@@ -187,13 +194,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "array_BMI * identity_vector"
    ]
   },
   {
@@ -206,11 +222,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file has 21 lines.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ],\n",
+       "       [  1.  , 105.  ,  47.  ,  85.4 ,   1.75,   5.1 ,  63.  ,  33.  ],\n",
+       "       [  2.  , 115.  ,  49.  ,  94.2 ,   2.1 ,   3.8 ,  70.  ,  14.  ],\n",
+       "       [  3.  , 116.  ,  49.  ,  95.3 ,   1.98,   8.2 ,  72.  ,  10.  ],\n",
+       "       [  4.  , 117.  ,  50.  ,  94.7 ,   2.01,   5.8 ,  73.  ,  99.  ],\n",
+       "       [  5.  , 112.  ,  51.  ,  89.4 ,   1.89,   7.  ,  72.  ,  95.  ],\n",
+       "       [  6.  , 121.  ,  48.  ,  99.5 ,   2.25,   9.3 ,  71.  ,  10.  ],\n",
+       "       [  7.  , 121.  ,  49.  ,  99.8 ,   2.25,   2.5 ,  69.  ,  42.  ],\n",
+       "       [  8.  , 110.  ,  47.  ,  90.9 ,   1.9 ,   6.2 ,  66.  ,   8.  ],\n",
+       "       [  9.  , 110.  ,  49.  ,  89.2 ,   1.83,   7.1 ,  69.  ,  62.  ],\n",
+       "       [ 10.  , 114.  ,  48.  ,  92.7 ,   2.07,   5.6 ,  64.  ,  35.  ],\n",
+       "       [ 11.  , 114.  ,  47.  ,  94.4 ,   2.07,   5.3 ,  74.  ,  90.  ],\n",
+       "       [ 12.  , 115.  ,  49.  ,  94.1 ,   1.98,   5.6 ,  71.  ,  21.  ],\n",
+       "       [ 13.  , 114.  ,  50.  ,  91.6 ,   2.05,  10.2 ,  68.  ,  47.  ],\n",
+       "       [ 14.  , 106.  ,  45.  ,  87.1 ,   1.92,   5.6 ,  67.  ,  80.  ],\n",
+       "       [ 15.  , 125.  ,  52.  , 101.3 ,   2.19,  10.  ,  76.  ,  98.  ],\n",
+       "       [ 16.  , 114.  ,  46.  ,  94.5 ,   1.98,   7.4 ,  69.  ,  95.  ],\n",
+       "       [ 17.  , 106.  ,  46.  ,  87.  ,   1.87,   3.6 ,  62.  ,  18.  ],\n",
+       "       [ 18.  , 113.  ,  46.  ,  94.5 ,   1.9 ,   4.3 ,  70.  ,  12.  ],\n",
+       "       [ 19.  , 110.  ,  48.  ,  90.5 ,   1.88,   9.  ,  71.  ,  99.  ],\n",
+       "       [ 20.  , 122.  ,  56.  ,  95.7 ,   2.09,   7.  ,  75.  ,  99.  ]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Open a text file (csv files are just plaintext seperated by commas)\n",
     "f = open('bp.txt')\n",
@@ -224,10 +276,56 @@
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
+    "matrix = np.zeros([n_rows, n_cols])\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
+    "for n, line in enumerate(f):\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
+    "    if n > 0:\n",
+    "        matrix[n,:] = line.split('\\t')\n",
     "    #Hint: skip the first row (its just column names, not the data.)\n",
-    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
+    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n",
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ],\n",
+       "       [  2.  , 210.  ,  94.  , 170.8 ,   3.5 ,  10.2 , 126.  ,  66.  ],\n",
+       "       [  4.  , 230.  ,  98.  , 188.4 ,   4.2 ,   7.6 , 140.  ,  28.  ],\n",
+       "       [  6.  , 232.  ,  98.  , 190.6 ,   3.96,  16.4 , 144.  ,  20.  ],\n",
+       "       [  8.  , 234.  , 100.  , 189.4 ,   4.02,  11.6 , 146.  , 198.  ],\n",
+       "       [ 10.  , 224.  , 102.  , 178.8 ,   3.78,  14.  , 144.  , 190.  ],\n",
+       "       [ 12.  , 242.  ,  96.  , 199.  ,   4.5 ,  18.6 , 142.  ,  20.  ],\n",
+       "       [ 14.  , 242.  ,  98.  , 199.6 ,   4.5 ,   5.  , 138.  ,  84.  ],\n",
+       "       [ 16.  , 220.  ,  94.  , 181.8 ,   3.8 ,  12.4 , 132.  ,  16.  ],\n",
+       "       [ 18.  , 220.  ,  98.  , 178.4 ,   3.66,  14.2 , 138.  , 124.  ],\n",
+       "       [ 20.  , 228.  ,  96.  , 185.4 ,   4.14,  11.2 , 128.  ,  70.  ],\n",
+       "       [ 22.  , 228.  ,  94.  , 188.8 ,   4.14,  10.6 , 148.  , 180.  ],\n",
+       "       [ 24.  , 230.  ,  98.  , 188.2 ,   3.96,  11.2 , 142.  ,  42.  ],\n",
+       "       [ 26.  , 228.  , 100.  , 183.2 ,   4.1 ,  20.4 , 136.  ,  94.  ],\n",
+       "       [ 28.  , 212.  ,  90.  , 174.2 ,   3.84,  11.2 , 134.  , 160.  ],\n",
+       "       [ 30.  , 250.  , 104.  , 202.6 ,   4.38,  20.  , 152.  , 196.  ],\n",
+       "       [ 32.  , 228.  ,  92.  , 189.  ,   3.96,  14.8 , 138.  , 190.  ],\n",
+       "       [ 34.  , 212.  ,  92.  , 174.  ,   3.74,   7.2 , 124.  ,  36.  ],\n",
+       "       [ 36.  , 226.  ,  92.  , 189.  ,   3.8 ,   8.6 , 140.  ,  24.  ],\n",
+       "       [ 38.  , 220.  ,  96.  , 181.  ,   3.76,  18.  , 142.  , 198.  ],\n",
+       "       [ 40.  , 244.  , 112.  , 191.4 ,   4.18,  14.  , 150.  , 198.  ]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "double_matrix = matrix * 2\n",
+    "double_matrix"
    ]
   },
   {
@@ -247,9 +345,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -261,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
